# Adaptive-Multi-Modal-SLAM-with-Uncertainty-Aware-Sensor-Fusion

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  README_EL.md  README_GR.md  SECURITY.md  aggregate_results.py  apply_degradation.py  compare_results.py  evaluate_trajectory.py  generate_paper_artifacts.py  generate_plots.py  pyproject.toml  requirements.txt  run_benchmark_plan.py  run_experiment.py  run_orbslam3_experiment.py  summarize_diagnostics.py
.github/: pull_request_template.md
benchmark/: README.md  example_metric.json
benchmarks/: BENCHMARK_STATUS.md  README.md
configs/: benchmark_plan.yaml  default.yaml  degradation_low_light_blur.yaml  example_experiment.yaml  orbslam3_euroc.yaml  self_healing.yaml  synthetic_lidar_dropout.yaml  synthetic_visual_degradation.yaml
datasets/: README.md
docker/: Dockerfile
docs/: ADAPTIVE_SENSOR_FUSION.md  BASELINES.md  CLAIMS_AND_EVIDENCE.md  DATASETS.md  EVALUATION_PROTOCOL.md  MATHEMATICAL_FORMULATION.md  PHASE2_AUDIT.md  PHASE2_RUFF_FIX.md  PHASE_0_REPOSITORY_AUDIT.md  PHASE_EXECUTION.md  REPOSITORY_AUDIT.md  RESEARCH_AUDIT.md  RESEARCH_OVERVIEW.md  RESEARCH_SOFTWARE_AUDIT.md  SYNTHETIC_DEMO.md  SYSTEM_ARCHITECTURE.md  THEORY.md  UNCERTAINTY_QUANTIFICATION.md  experiment_protocol.md  orbslam3_euroc_setup.md  project_roadmap.md  research_proposal.md  research_questions.md  result_aggregation.md  roadmap.md
experiments/: MANIFEST_SCHEMA.md  README.md
paper/: main.tex  references.bib
scripts/: check_dataset_manifest.py  create_benchmark_metric.py  degradation_pipeline.py  generate_benchmark_table.py  generate_figures.py  generate_research_media.py  make_demo_gif.py  run_all.py  run_all_phases.py  run_synthetic_demo.py  validate_benchmark_metrics.py
slam_fusion/: __init__.py
src/: __init__.py  adaptive_fusion.py  analysis.py  benchmark_plan.py  config.py  dataset_loader.py  diagnostics.py  evaluation.py  failure_predictor.py  health_monitor.py  logger.py  metrics.py  paper_artifacts.py  provenance.py  recovery_manager.py  recovery_policy.py  result_aggregation.py  self_healing_state_machine.py  slam_backend.py  system_state.py  trajectory.py  uncertainty_estimator.py  visualization.py
tests/: test_adaptive_fusion.py  test_analysis.py  test_apply_degradation_cli.py  test_baselines_and_manifests.py  test_benchmark_plan.py  test_config.py  test_dataset_loader.py  test_degradation_pipeline.py  test_diagnostics.py  test_evaluate_trajectory_cli.py  test_evaluation.py  test_failure_and_recovery.py  test_generate_plots_cli.py  test_metrics_uncertainty_fusion.py  test_orbslam3_backend.py  test_paper_artifacts.py  test_phase2_conformal.py  test_phase2_consistency_predictive.py  test_phase2_core.py  test_phase2_shift_robust.py  test_provenance.py  test_real_frontends_and_recovery.py  test_research_backends.py  (+12 more)
(+62 files in other folders)
