[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-multimodal-slam"
version = "0.1.0"
description = "Adaptive multi-modal SLAM with uncertainty-aware sensor fusion research framework."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Panagiota Grosdouli" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
]

[tool.setuptools]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "B",
    "UP",
    "N",
    "ANN",
    "D",
    "SIM",
    "C4",
    "RUF",
]
ignore = [
    "D100",
    "D104",
    "ANN101",
    "ANN102",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q --cov=src --cov-report=term-missing"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = false
no_implicit_optional = true
check_untyped_defs = true
