[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adaptive-multimodal-slam"
version = "0.3.0"
description = "PhD-grade adaptive multi-modal SLAM research framework with uncertainty-aware sensor fusion."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Panagiota Grosdouli" }]
license = { text = "MIT" }
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.8",
    "pyyaml>=6.0",
    "matplotlib>=3.7",
    "scipy>=1.10",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "black>=24.0",
    "ruff>=0.5",
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "pre-commit>=3.7",
]
website = ["nodeenv>=1.9"]

[tool.setuptools.packages.find]
where = ["."]
include = ["slam_fusion*", "src*"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["slam_fusion", "src", "tests", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "B", "SIM", "C4", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.10"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
no_implicit_optional = true
check_untyped_defs = true
